--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     ],
     "compilerOptions": {
         "strict": true,
+        "noImplicitAny": false,
+
         "esModuleInterop": true,
         "lib": [
             "dom",
